syntax = "proto3";

package user;

option csharp_namespace = "GrpcService.Protos";

message GetUserRequest {
	int32 id = 1;
}

message GetUserResponse{
	int32 id = 1;
	string name = 2;
	string email = 3;
}

service UserService{
	rpc GetUser (GetUserRequest) returns (GetUserResponse);
}